little refactor; getting somewhere